change in title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4833437087808215"
      crossorigin="anonymous"></script>
     <link rel="icon" href="./images/tab logo.png">
-    <title>AllAI</title>
+    <title>AllAI- all AI tools at one place</title>
 </head>
 
 <body>
