--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content=" All AI tools at one place. No need to search here and there for AI tools. Most of the AI tools at one website.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +12,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4833437087808215"
      crossorigin="anonymous"></script>
     <link rel="icon" href="./images/tab logo.png">
-    <title>AllAI- all AI tools at one place</title>
+    <title>AllAI - All AI tools at one place</title>
 </head>
 
 <body>
